--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
             <div class="col-lg-6 p-0">
               <img src="img/fitness6.jpg" class="w-100 h-100" alt="" />
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 d-flex justify-content-center align-items-center">
               <div
-                class="training-right-text h-100 d-flex flex-column justify-content-center"
+                class="training-right-text"
               >
                 <h2>INDIVIDUAL TRAINING</h2>
                 <p>
@@ -261,9 +261,9 @@
                 <a class="btn btn-lg" href="#">BOOK A SESSION NOW</a>
               </div>
             </div>
-            <div class="col-lg-6 order-lg-1 order-md-2 order-2">
+            <div class="col-lg-6 order-lg-1 order-md-2 order-2 d-flex justify-content-center align-items-center">
               <div
-                class="training-left-text h-100 d-flex flex-column justify-content-center"
+                class="training-left-text"
               >
                 <h2>GROUP TRAINING</h2>
                 <p>
